--- a/scss/object/project/_access.scss
+++ b/scss/object/project/_access.scss
@@ -2,6 +2,15 @@
 @use "../../foundation/mixin";
 .p-main__access {
     width: 100%;
+    position: relative;
+    z-index: 0;
+    @include mixin.tab {
+        padding-bottom: 50px;
+    }
+    @include mixin.pc {
+        padding-bottom: inherit;
+        position: inherit;
+    }
     &-sub {
         margin: 0 20px;
         text-align: center;
@@ -19,7 +28,7 @@
             @include mixin.pc {
                 font-size: 27px;
                 margin-bottom: 50px;
-                padding-top: 66px;
+                padding-top: 140px;
             }
         }
         .p-main__access-map-img {
@@ -191,6 +200,7 @@
                         height: 60px;
                         line-height: 60px;
                         font-size: 18px;
+                        font-family: "Hiragino Kaku Gothic Pro";
                         background-color: #EEC4BD;
                         border-radius: 10px;
                         margin-bottom: 20px;
