--- a/scss/object/project/_feature.scss
+++ b/scss/object/project/_feature.scss
@@ -1,18 +1,49 @@
 @charset "UTF-8";
 @use "../../foundation/mixin";
 .p-main__feature {
-    background-image: url(/images/Rectangle\ 13.png);
     width: 100%;
-    height: 430px;
     position: relative;
+    z-index: -100;
     height: auto;
-    background-size: contain;
-    background-position: top;
+    @include mixin.tab {
+        height: auto;
+        padding-bottom: 50px;
+    }
     @include mixin.pc {
-        background-image: url(/images/Rectangle-pc\ 13.png);
-        height: 817px;
         background-size: cover;
         background-position: inherit;
+        height: 867px;
+        margin-top: 44px;
+        padding-bottom: inherit;
+    }
+    .p-main__background-img {
+        background-image: url(/images/Rectangle\ 13.png);
+        background-size: cover;
+        background-position: top;
+        height: 430px;
+        width: 100%;
+        position: absolute;
+        @include mixin.tab {
+            background-image: url(/images/Rectangle-pc\ 13.png);
+        }
+        @include mixin.pc {
+            height: 100%;
+        }
+    }
+    .p-main__background-img::after {
+        content: "";
+        background-image: url(/images/ぼかし.png);
+        background-position: top;
+        background-repeat: repeat-x;
+        position: absolute;
+        top: 382px;
+        left: 0;
+        height: 50px;
+        width: 100%;
+        z-index: 0;
+        @include mixin.pc {
+            display: none;
+        }
     }
     &-background {
         position: absolute;
@@ -213,19 +244,5 @@
                 margin-bottom: 0;
             }
         }
-    }
-}
-.p-main__feature::after {
-    content: "";
-    background-image: url(/images/ぼかし.png);
-    background-position: top;
-    background-repeat: repeat-x;
-    position: absolute;
-    top: 515px;
-    left: 0;
-    height: 50px;
-    width: 100%;
-    @include mixin.pc {
-        display: none;
     }
 }
