--- a/scss/object/project/_header-main.scss
+++ b/scss/object/project/_header-main.scss
@@ -9,7 +9,8 @@
         display: flex;
         justify-content: center;
         margin: 0 auto;
-        position: inherit;
+        position: relative;
+        z-index: 20;
     }
     &__title-logo {
         margin: 0 0 0 20px;
@@ -31,7 +32,7 @@
         display: none;
         background-color: #E9F2F4;
         position: absolute;
-        top: 70px;
+        top: 54px;
         width: 100%;
         text-align: center;
         z-index: 5;
@@ -105,6 +106,7 @@
     }
     &__tell-box {
         display: none;
+        font-family: "Hiragino Kaku Gothic Pro";
         @include mixin.pc {
             display: block;
             margin-left: 5px;
@@ -117,6 +119,9 @@
             margin: 25px 140px 8px 0;
             font-size: 20px;
             letter-spacing: 0.04em;
+            @include mixin.pc {
+                font-size: 15px;
+            }
             .fa-phone-alt {
                 font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
                 content: "\f879";   //アイコンの決められたコード
@@ -127,7 +132,7 @@
         }
         .business-hours {
             font-size: 18px;
-            margin-left: 28px;
+            margin-left: 15px;
             letter-spacing: 0.04em;
             .fa-clock {
                 font-family: "Font Awesome 5 Free"; //Font Awesomeバージョン5のフリー版
