--- a/scss/object/project/_information.scss
+++ b/scss/object/project/_information.scss
@@ -1,8 +1,17 @@
 @charset "UTF-8";
 @use "../../foundation/mixin";
+article {
+    position: relative;
+    z-index: 0;
+}
 .p-main__information {
     width: 100%;
     background-color: #E9F2F4;
+    position: relative;
+    z-index: -30;
+    @include mixin.pc {
+        z-index: inherit;
+    }
     &-block { 
         background-size: contain;
         height: auto;
@@ -68,9 +77,6 @@
             }
             br {
                 display: none;
-                @include mixin.mid {
-                    display: block;
-                }
             }
         }
         .p-main__information-detail {
@@ -88,6 +94,8 @@
             margin-top: 40px;
             margin-bottom: 37px;
             font-size: 14px;
+            position: relative;
+            z-index: 20;
             @include mixin.tab {
                 width: 35%;
             }
@@ -98,5 +106,27 @@
                 font-size: 16px;
             }
         }
+    }
+    &-block::after {
+        content: "";
+        background-image: url(/images/Vector\ 15.png);
+        background-position: bottom;
+        background-size: contain;
+        left: 0;
+        bottom: -21px;
+        width: 100%;
+        height: 30%;
+        position: absolute;
+        z-index: 10;
+        @include mixin.tab {
+            bottom: -56px;
+        }
+        @include mixin.sub {
+            bottom: -60px;
+        }
+        @include mixin.pc {
+            bottom: -106px;
+        }
+
     }
 }
