--- a/scss/object/project/_header-main.scss
+++ b/scss/object/project/_header-main.scss
@@ -51,6 +51,10 @@
                 }
                 a {
                     font-size: 18px;
+                    transition: 0.2s;
+                }
+                a:hover {
+                    color: #51A8BB;
                 }
             }
             .p-header__nav-list:nth-child(1) {
@@ -84,6 +88,10 @@
                 }
                 a {
                     font-size: 18px;
+                    transition: 0.2s;
+                }
+                a:hover {
+                    color: #51A8BB;
                 }
             }
         }
