--- a/scss/object/project/_information.scss
+++ b/scss/object/project/_information.scss
@@ -96,6 +96,7 @@ article {
             font-size: 14px;
             position: relative;
             z-index: 20;
+            transition: 0.3s;
             @include mixin.tab {
                 width: 35%;
             }
@@ -105,6 +106,10 @@ article {
                 margin-bottom: 25px;
                 font-size: 16px;
             }
+        }
+        .p-main__information-detail:hover {
+            color: #FFFFFF;
+            background-color: #51A8BB;
         }
     }
     &-block::after {
