--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,7 @@
    @use "object/project/contents";
    @use "object/project/access";
    @use "object/project/button";
+   @use "object/project/fadeup";
 
 /* Utility
    ----------------------------------------------------------------- */
