--- a/scss/object/project/_feature.scss
+++ b/scss/object/project/_feature.scss
@@ -113,13 +113,11 @@
                     padding: 0 35px;
                     white-space: nowrap;
                     font-size: 15px;
-                    @include mixin.pc {
-                        font-size: 1vw;
-                    }
                 }
                 img {
                     margin-top: 20px;
                 }
+                
             }
             .p-main__feature-block:nth-child(3) {
                 margin-bottom: 0;
@@ -244,5 +242,10 @@
                 margin-bottom: 0;
             }
         }
+        .p-main__feature-btn:hover {
+            color: #FFFFFF;
+            background-color: #51A8BB;
+        }
     }
 }
+
