--- a/scss/object/project/_footer-main.scss
+++ b/scss/object/project/_footer-main.scss
@@ -51,9 +51,13 @@
                     }
                     a {
                         font-size: 14px;
+                        transition: 0.2s;
                         @include mixin.pc {
                             font-size: 18px;
                         }
+                    }
+                    a:hover {
+                        color: #51A8BB;
                     }
                 }
                 .p-footer__separation {
